[#48] Fix overflow footer for small screens

--- a/app/assets/stylesheets/layouts/default.scss
+++ b/app/assets/stylesheets/layouts/default.scss
@@ -1,7 +1,6 @@
 .layout-default {
   .app-footer {
     width: 100%;
-    height: 60px;
     margin-top: 2rem;
     line-height: 60px;
     background-color: $gray-100;
